--- a/donate.html
+++ b/donate.html
@@ -5,6 +5,7 @@
 <script type="text/javascript" src="https://blockchain.info/Resources/js/pay-now-button.js"></script>
 </head>
 <body>
+Please donate if you find this project useful.
 <div style="font-size:16px;margin:0 auto;width:300px" class="blockchain-btn"
      data-address="16MH2DKykeYmPV22HdLjVHveHRdJ9F8Van"
      data-shared="false">
